@@ -1354,6 +1354,7 @@ $wgMessageStructure = array(
 		'listfiles_search_for',
 		'imgfile',
 		'listfiles',
+		'listfiles_thumbnail',
 		'listfiles_date',
 		'listfiles_name',
 		'listfiles_user',
